[ECS] 04: finish notes [skip ci]

--- a/src/Notes/ComputerScience/CA/ECS/index.html
+++ b/src/Notes/ComputerScience/CA/ECS/index.html
@@ -52,6 +52,9 @@ Hardware
 </li><li>
 <a href="03.html">Memory</a>
 
+</li><li>
+<a href="04.html">Machine Language</a>
+
 </li></ol>
 </li></ol>
 </div>
