[RTGW] 02: finish notes [skip ci]

--- a/src/Notes/ComputerScience/CA/ECS/04.html
+++ b/src/Notes/ComputerScience/CA/ECS/04.html
@@ -215,7 +215,7 @@ What to do next (<code>jump</code>)
 
 </li></ul>
 <p>
-In the binary version, the leftmost bit is the C-instruction’s <code>op-code</code>, which is $\(1. The next two bits are not used, and are set by convention to \)1$.
+In the binary version, the leftmost bit is the C-instruction’s <code>op-code</code>, which is \(1\). The next two bits are not used, and are set by convention to \(1\).
 </p>
 
 <div id="Machine Language-The Hack Machine Language-The Hack Language Specification-The C-instruction-Computation specification (`comp`)"><h5 id="Computation specification (`comp`)" class="header"><a href="#Machine Language-The Hack Machine Language-The Hack Language Specification-The C-instruction-Computation specification (`comp`)">Computation specification (<code>comp</code>)</a></h5></div>
