[AGAA] 08_05: finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -116,6 +116,9 @@ Trigonometric Functions and Applications.
 </li><li>
 <a href="08_04.html">Applications of Right Triangles</a>
 
+</li><li>
+<a href="08_05.html">The Circular Functions</a>
+
 </li></ol>
 </li></ol>
 </div>
