Fix typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/08_05.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/08_05.html
@@ -43,7 +43,7 @@ In FIGURE 72, we start at the point \((1, 0)\) and measure an arc of length \(s\
 </p>
 
 <p>
-Let the endpoint of this arc be at the point \((x, y)\). The circle in FIGURE 72 is a *unit circle*—it has center at the origin and radius \(1\) unit. We know that \(s = r \theta\), with \(r = 1\) then \(s = \theta\).
+Let the endpoint of this arc be at the point \((x, y)\). The circle in FIGURE 72 is a <span id="The Circular Functions-unit circle"></span><strong id="unit circle">unit circle</strong> —it has center at the origin and radius \(1\) unit. We know that \(s = r \theta\), with \(r = 1\) then \(s = \theta\).
 </p>
 
 <p>
@@ -105,7 +105,7 @@ The arc \(SR\) is the first-quadrant portion of the unit circle, and the standar
 </p>
 
 <p>
-For \(cos \theta\) and \(sin \theta\), use right triangle \(POQ\) and right-triangle ratios:
+For \(\cos \theta\) and \(\sin \theta\), use right triangle \(POQ\) and right-triangle ratios:
 </p>
 
 \begin{align}
@@ -129,7 +129,7 @@ For \(tan \theta\) and \(sec \theta\), use right triangle \(VOR\) and right-tria
 \end{align}
 
 <p>
-For \(csc \theta\) and \(cot \theta\), first note that \(US\) and \(OR\) are parallel. Thus angle \(SUO\) is equal to \(\theta\):
+For \(\csc \theta\) and \(\cot \theta\), first note that \(US\) and \(OR\) are parallel. Thus angle \(SUO\) is equal to \(\theta\):
 </p>
 
 \begin{align}
