Fix typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/08_05.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/08_05.html
@@ -117,7 +117,7 @@ For \(\cos \theta\) and \(\sin \theta\), use right triangle \(POQ\) and right-tr
 \end{align}
 
 <p>
-For \(tan \theta\) and \(sec \theta\), use right triangle \(VOR\) and right-triangle ratios:
+For \(\tan \theta\) and \(\sec \theta\), use right triangle \(VOR\) and right-triangle ratios:
 </p>
 
 \begin{align}
