[AGAA] 08_06: start notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/08_06.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/08_06.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../../src/style/custom.css">
-    <title>A Graphical Approach to Algebra and Trigonometry</title>
+    <title>Graphs of the Sine and Cosine Functions</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,99 +31,26 @@
     <hr>
     <div class="content">
 <p>
-<a href="../../index.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
-<div id="A Graphical Approach to Algebra and Trigonometry"><h1 id="A Graphical Approach to Algebra and Trigonometry" class="header"><a href="#A Graphical Approach to Algebra and Trigonometry">A Graphical Approach to Algebra and Trigonometry</a></h1></div>
+<div id="Graphs of the Sine and Cosine Functions"><h1 id="Graphs of the Sine and Cosine Functions" class="header"><a href="#Graphs of the Sine and Cosine Functions">Graphs of the Sine and Cosine Functions</a></h1></div>
 
 <hr>
 
-<ol>
-<li>
-Linear Functions, Equations and Inequalities
+<div id="Graphs of the Sine and Cosine Functions-Periodic Function"><h2 id="Periodic Function" class="header"><a href="#Graphs of the Sine and Cosine Functions-Periodic Function">Periodic Function</a></h2></div>
 
-</li><li>
-Analysis of Graphs of Functions
+<p>
+A <span id="Graphs of the Sine and Cosine Functions-Periodic Function-periodic function"></span><strong id="periodic function">periodic function</strong> is a  function \(f\), such that:
+</p>
 
-</li><li>
-Polynomial Functions
+\begin{align}
+f(x) = f(x + np)
+\end{align}
 
-</li><li>
-Rational, Power and Root Functions
-
-</li><li>
-Inverse, Exponential and Logarithmic Functions
-
-</li><li>
-Systems and Matrices
-
-<ol>
-<li>
-Systems of Equations
-
-</li><li>
-<a href="06_02.html">Solutions of Linear Systems in Three Variables</a>
-
-</li><li>
-<a href="06_03.html">Solution of Linear Systems by Row Transformations</a>
-
-</li><li>
-<a href="06_04.html">Matrix Properties and Operations</a>
-
-</li><li>
-<a href="06_05.html">Determinants and Cramer's Rule</a>
-
-</li><li>
-<a href="06_06.html">Solution of Linear Systems by Matrix Inverses</a>
-
-</li><li>
-<a href="06_07.html">Systems of Inequalities and Linear Programming</a>
-
-</li><li>
-<a href="06_08.html">Partial Fractions</a>
-
-</li></ol>
-</li><li>
-Analytic Geometry and Nonlinear Systems
-
-<ol>
-<li>
-<a href="07_01.html">Circles and Parabolas</a>
-
-</li><li>
-<a href="07_02.html">Ellipses and Hyperbolas</a>
-
-</li><li>
-<a href="07_03.html">The Conic Sections and Nonlinear Systems</a>
-
-</li><li>
-<a href="07_04.html">Parametric Equations</a>
-
-</li></ol>
-</li><li>
-Trigonometric Functions and Applications.
-
-<ol>
-<li>
-<a href="08_01.html">Angles and Their Measures</a>
-
-</li><li>
-<a href="08_02.html">Trigonometric Functions and Fundamental Identities</a>
-
-</li><li>
-<a href="08_03.html">Right Triangles and Evaluating Trigonometric Functions</a>
-
-</li><li>
-<a href="08_04.html">Applications of Right Triangles</a>
-
-</li><li>
-<a href="08_05.html">The Circular Functions</a>
-
-</li><li>
-<a href="08_06.html">Graph of the Sine and Cosine Functions</a>
-
-</li></ol>
-</li></ol>
+<p>
+for every real number \(x\) in the domain of \(f\), every integer \(n\) and some positive real number \(p\). The least possible value of \(p\) is the <span id="Graphs of the Sine and Cosine Functions-Periodic Function-period"></span><strong id="period">period</strong> of the function.
+</p>
 </div>
   
 
