--- a/src/Notes/ComputerScience/CA/ECS/index.html
+++ b/src/Notes/ComputerScience/CA/ECS/index.html
@@ -55,6 +55,9 @@ Hardware
 </li><li>
 <a href="04.html">Machine Language</a>
 
+</li><li>
+<a href="05.html">Computer Architecture</a>
+
 </li></ol>
 </li></ol>
 </div>
