Update study [skip ci]

--- a/src/Study/index.html
+++ b/src/Study/index.html
@@ -42,124 +42,13 @@
 
 <ul>
 <li>
-<a href="Math/index.html">Math</a>
+<a href="Math.html">Math</a>
 
 </li><li>
 <a href="CS/index.html">CS</a>
 
 </li><li>
-<a href="DataScience/index.html">DataScience</a>
-
-</li><li>
-Web Development
-
-</li></ul>
-<hr>
-
-<div id="Study-Course Plan"><h2 id="Course Plan" class="header"><a href="#Study-Course Plan">Course Plan</a></h2></div>
-
-
-
-<div id="Study-Course Plan-Current"><h3 id="Current" class="header"><a href="#Study-Course Plan-Current">Current</a></h3></div>
-
-<ul>
-<li class="done0">
-College Algebra: <em>Start from chapter 2</em>
-
-</li><li class="done0">
-NAND2Tetris
-
-</li><li class="done1">
-Review React
-
-<ul>
-<li class="done4">
-Do the <code>React Crash Course</code>.
-
-</li><li class="done4">
-Do the <code>Redux Crash Course</code>
-
-</li><li class="done1">
-Choose the Markdown previewer or the 25 + 5 clock (or both!!!! or neither!!!)
-
-</li></ul>
-</li></ul>
-<div id="Study-Course Plan-Future"><h3 id="Future" class="header"><a href="#Study-Course Plan-Future">Future</a></h3></div>
-
-<p>
-Ordered by priority, one choose <span id="Study-Course Plan-Future-one at a time"></span><strong id="one at a time">one at a time</strong>
-</p>
-
-<ul>
-<li class="done1">
-Backend Dev
-
-<ul>
-<li class="done4">
-<span id="Study-Course Plan-Future-Spring Boot"></span><strong id="Spring Boot">Spring Boot</strong> (<a href="https://medium.com/javarevisited/top-10-courses-to-learn-spring-boot-in-2020-best-of-lot-6ffce88a1b6e">List of courses</a>): Do the <a href="https://www.udemy.com/course/spring-hibernate-tutorial/?ranMID=39197&amp;ranEAID=CuIbQrBnhiw&amp;ranSiteID=CuIbQrBnhiw-5zCtKLu2zk2lcQcUPVWNkg&amp;LSNPUBID=CuIbQrBnhiw&amp;utm_source=aff-campaign&amp;utm_medium=udemyads">Spring Course</a> (<em>max 2 weeks</em>)
-
-</li><li class="done0">
-<a href="https://www.geeksforgeeks.org/web-development-project-ideas/">Projects</a>
-
-</li><li class="done0">
-Do the <a href="https://www.freecodecamp.org/learn/back-end-development-and-apis/">Back End Dev course</a> from freecodecamp (<em>max a week</em>)
-
-</li><li class="done0">
-Continue the Bookish project (add GraphQL)
-
-</li></ul>
-</li><li class="done1">
-Learn C++
-
-<ul>
-<li class="done1">
-<a href="https://www.tutorialspoint.com/cplusplus/index.htm">Tutorialspoints course</a> (<em>max a week</em>)
-
-</li><li class="done0">
-<a href="https://cmake.org/cmake/help/latest/guide/tutorial/index.html">Learn how to use cmake</a>
-
-</li><li class="done0">
-Search for projects, some are:
-
-<ul>
-<li class="done0">
-<a href="https://www.educba.com/data-structures-and-algorithms/">Data Structure</a>
-
-</li></ul>
-</li></ul>
-</li><li class="done0">
-Data Analysis with Python Course from freecodecamp
-
-</li><li class="done0">
-Data Visualization Course from freecodecamp
-
-</li><li class="done0">
-Review College subject on <code>Machine Learning</code>
-
-<ul>
-<li class="done0">
-Notes
-
-</li><li class="done0">
-Practice projects (add snippets to notes)
-
-</li></ul>
-</li></ul>
-<p>
-To search for more project go to <a href="https://www.kashipara.com/project/topics/latest_c-c--project-ideas_4">Project Ideas</a>, there are project listings for a lot of languages, frameworks.
-</p>
-
-<div id="Study-Course Plan-Achive"><h3 id="Achive" class="header"><a href="#Study-Course Plan-Achive">Achive</a></h3></div>
-
-<ul>
-<li class="done4">
-Copy ML notes (<em>at least 1h a day</em>)
-
-</li><li class="done4">
-Read <code>Math for Machine Learning</code>
-
-</li><li class="done4">
-Finish SICP Berkeley (<em>at least 1h a day</em>)
+<a href="Development.html">Development</a>
 
 </li></ul>
 </div>
