--- a/src/Study/Math.html
+++ b/src/Study/Math.html
@@ -1,8 +1,8 @@
 <html><head>
     <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../src/style/index.css">
+    <link rel="Stylesheet" type="text/css" href="../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../src/style/custom.css">
+    <link rel="Stylesheet" type="text/css" href="../../src/style/custom.css">
     <title>Math</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="../index.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
 <div id="Math"><h1 id="Math" class="header"><a href="#Math">Math</a></h1></div>
