[ECS] 06: finish notes [skip ci]

--- a/src/Notes/ComputerScience/CA/ECS/index.html
+++ b/src/Notes/ComputerScience/CA/ECS/index.html
@@ -58,6 +58,9 @@ Hardware
 </li><li>
 <a href="05.html">Computer Architecture</a>
 
+</li><li>
+<a href="06.html">Assembler</a>
+
 </li></ol>
 </li></ol>
 </div>
