[ECS] 07: start adding notes [skip ci]

--- a/src/Notes/ComputerScience/CA/ECS/index.html
+++ b/src/Notes/ComputerScience/CA/ECS/index.html
@@ -62,6 +62,14 @@ Hardware
 <a href="06.html">Assembler</a>
 
 </li></ol>
+</li><li>
+Software
+
+<ol>
+<li>
+<a href="07.html">Virtual Machine I: Processing</a>
+
+</li></ol>
 </li></ol>
 </div>
   
