--- a/src/Notes/ComputerScience/CG/RTGW/03.html
+++ b/src/Notes/ComputerScience/CG/RTGW/03.html
@@ -175,7 +175,7 @@ The light-direction vector is the vector that starts on the surface and ends on 
 </p>
 
 \begin{align}
-F = C_lC_m(-L \dot N)
+F = C_lC_m(-L \circle N)
 \end{align}
 
 <p>
@@ -183,7 +183,7 @@ Where \(F\) is the final diffuse color, \(C_l\) is the light diffuse color and \
 </p>
 
 \begin{align}
--L \cot N = |-L||N| \dot \emptyset
+-L \cot N = |-L||N| \circle \emptyset
 \end{align}
 
 <p>
@@ -236,7 +236,7 @@ So the specular color is computed as follows:
 </p>
 
 \begin{align}
-F_s = C_lC_m (R \dot E)^n
+F_s = C_lC_m (R \circle E)^n
 \end{align}
 
 <p>
@@ -244,7 +244,7 @@ where \(F_s\) is the final specular color, \(C_l\) is the light specular color, 
 </p>
 
 <p>
-If \(R\) and \(E\) are normalized, then \(R \dot E = \cos \emptyset\):
+If \(R\) and \(E\) are normalized, then \(R \circle E = \cos \emptyset\):
 </p>
 
 \begin{align}
@@ -253,6 +253,288 @@ F_s = C_lC_m (\cos \emptyset)^n
 
 <p>
 We know that the maximum value of \(\cos \theta\) is \(1\), and it is reached when \(\theta = 0\), that is when \(R\) and \(E\) have the same direction.
+</p>
+
+<div id="Lights-Shading Methods and Light-Reflection Models-Summary"><h3 id="Summary" class="header"><a href="#Lights-Shading Methods and Light-Reflection Models-Summary">Summary</a></h3></div>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/shading_lighting_methods_summary.png" alt="Shading and Lighting Methods Summary" style="height:350px">
+</p>
+
+<div id="Lights-OpenGL ES Shading Language (ESSL)"><h2 id="OpenGL ES Shading Language (ESSL)" class="header"><a href="#Lights-OpenGL ES Shading Language (ESSL)">OpenGL ES Shading Language (ESSL)</a></h2></div>
+
+<p>
+The OpenGL ES Shading Language (ESSL) is the language we'll use to write our shaders.
+</p>
+
+<div id="Lights-OpenGL ES Shading Language (ESSL)-Storage Qualifier"><h3 id="Storage Qualifier" class="header"><a href="#Lights-OpenGL ES Shading Language (ESSL)-Storage Qualifier">Storage Qualifier</a></h3></div>
+
+<p>
+Variable declarations may have a storage qualifier specified in front of the type: <code>atrribute</code>, <code>uniform</code>, <code>varying</code> or <code>const</code>.
+</p>
+
+<div id="Lights-OpenGL ES Shading Language (ESSL)-Types"><h3 id="Types" class="header"><a href="#Lights-OpenGL ES Shading Language (ESSL)-Types">Types</a></h3></div>
+
+<p>
+Here is a non-exhaustive list of the most common ESSL types:
+</p>
+
+<ul>
+<li>
+<code>void</code>: For functions that do not return a value or for an empty parameter list
+
+</li><li>
+<code>bool</code>: A conditional type, taking on values of true or false
+
+</li><li>
+<code>int</code>: A signed integer
+
+</li><li>
+<code>float</code>: A single floating-point scalar
+
+</li><li>
+<code>vec2</code>: A two-component floating-point vector
+
+</li><li>
+<code>vec3</code>: A three-component floating-point vector
+
+</li><li>
+<code>vec4</code>: A four-component floating-point vector
+
+</li><li>
+<code>bvec2</code>: A two-component Boolean vector
+
+</li><li>
+<code>bvec3</code>: A three-component Boolean vector
+
+</li><li>
+<code>bvec4</code>: A four-component Boolean vector
+
+</li><li>
+<code>ivec2</code>: A two-component integer vector
+
+</li><li>
+<code>ivec3</code>: A three-component integer vector
+
+</li><li>
+<code>ivec4</code>: A four-component integer vector
+
+</li><li>
+<code>mat2</code>: A 2×2 floating-point matrix
+
+</li><li>
+<code>mat3</code>: A 3×3 floating-point matrix
+
+</li><li>
+<code>mat4</code>: A 4×4 floating-point matrix
+
+</li><li>
+<code>sampler2D</code>: A handle for accessing a 2D texture
+
+</li><li>
+<code>sampler3D</code>: A handle for accessing a 3D texture
+
+</li><li>
+<code>samplerCube</code>: A handle for accessing a cube-mapped texture
+
+</li><li>
+<code>struct</code>: Used to declare custom data structures based on standard types
+
+</li></ul>
+<div id="Lights-OpenGL ES Shading Language (ESSL)-Vector Components"><h3 id="Vector Components" class="header"><a href="#Lights-OpenGL ES Shading Language (ESSL)-Vector Components">Vector Components</a></h3></div>
+
+<p>
+We can refer to each one of the components of an ESSL vector by its index.  However, we can also refer to each component by a letter, as demonstrated in the following table:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/vector_components.png" alt="Vector Components" style="height:70px">
+</p>
+
+<p>
+It’s also possible to use the vector component notation to refer to subsets inside a vector:
+</p>
+
+<pre>vec4 v4;
+v4.rgba;  // is a vec4 and the same as just using v4
+v4.rgb;   // is a vec3
+v4.b;     // is a float
+v4.xy;    // is a vec2
+v4.xgba;  // is illegal - the component names do not come from the same set
+</pre>
+
+<div id="Lights-OpenGL ES Shading Language (ESSL)-Operators and Functions"><h3 id="Operators and Functions" class="header"><a href="#Lights-OpenGL ES Shading Language (ESSL)-Operators and Functions">Operators and Functions</a></h3></div>
+
+<p>
+One of the major advantages of GLSL and ESSL are the powerful built-in mathematical operators. Let's see a few examples of these operations:
+</p>
+
+<ul>
+<li>
+<code>-x</code>: The negative of the \(x\) vector. It produces the same vector in the exact opposite direction.
+
+</li><li>
+<code>x + y</code>: Sum of the \(x\) and \(y\) vectors. Both vectors need to have the same number
+
+</li></ul>
+<p>
+of components.
+</p>
+<ul>
+<li>
+<code>x - y</code>: Subtraction of the \(x\) and \(y\) vectors. Both vectors need to have the same number of components.
+
+</li><li>
+<code>x * y</code>: If \(x\) and \(y\) are both vectors, this operator yields a component-wise multiplication. Multiplication applied to two matrices returns a linear algebraic matrix multiplication, not a component-wise multiplication. 
+
+</li><li>
+<code>matrixCompMult(matX, matY)</code>: Component-wise multiplication of matrices. They need to have the same dimensions.
+
+</li><li>
+<code>x / y</code>: The division operator behaves similarly to the multiplication operator.
+
+</li><li>
+<code>dot(x, y)</code>: Returns the dot product (scalar) of two vectors. They need to have the same dimensions.
+
+</li><li>
+<code>cross(vecX, vecY)</code>: Returns the cross product (vector) of two vectors. They must both be <code>vec3</code>.
+
+</li><li>
+<code>normalize(x)</code>: Returns a vector in the same direction but with a length of \(1\).
+
+</li><li>
+<code>reflect(t, n)</code>: Reflects the \(t\) vector along the \(n\) vector.
+
+</li></ul>
+<div id="Lights-OpenGL ES Shading Language (ESSL)-Vertex Shader"><h3 id="Vertex Shader" class="header"><a href="#Lights-OpenGL ES Shading Language (ESSL)-Vertex Shader">Vertex Shader</a></h3></div>
+
+<p>
+Let's cover a sample vertex shader. In this example we are applying Goraud Shading (we compute the color on the vertex shader and the pass it as a <code>varying</code> to the fragment shader). And in order to compute the color we use the Lambertian reflection model. That is the color is computed as follows:
+</p>
+
+\begin{align}
+F = C_lC_m (-L \circle N) = C_l C_m (|-L||N| \cos \emptyset) = C_l C_m (\cos \emptyset)
+\end{align}
+
+<p>
+Where:
+</p>
+
+<ul>
+<li>
+<code>uLightDiffuse</code> is \(C_l\)
+
+</li><li>
+<code>uMaterialDiffuse</code> is \(C_m\)
+
+</li><li>
+<code>aVertexNormal</code> is \(N\)
+
+</li><li>
+<code>uLightDirection</code> is \(L\)
+
+</li></ul>
+<p>
+And we output the computed color <code>vVertexColor</code> to the fragment shader.
+</p>
+
+<pre>#version 300 es
+uniform mat4 uModelViewMatrix;
+uniform mat4 uProjectionMatrix;
+uniform mat4 uNormalMatrix;
+uniform vec3 uLightDirection;     // incoming light source direction
+uniform vec3 uLightDiffuse;       // light diffuse component
+uniform vec3 uMaterialDiffuse;    // material diffuse color
+
+in vec3 aVertexPosition;
+in vec3 aVertexNormal;
+
+out vec4 vVertexColor;
+
+void main(void) {
+  vec3 normal = normalize(vec3(uNormalMatrix * vec4(aVertexNormal, 1.0)));
+  vec3 lightDirection = normalize(uLightDirection);
+  
+  float LambertianTerm = dot(normal, -lightDirection);
+  
+  vVertexColor = vec4(uMaterialDiffuse * uLightDiffuse * LambertianTerm, 1.0);
+  
+  gl_Position = uProjectionMatrix * uModelViewMatrix * vec4(aVertexPosition, 1.0);
+}
+</pre>
+
+<p>
+As you can see first we normalize the vertex normal, named <code>normal</code> and we do the same with the light direction and we stored the normalized value under <code>lightDirection</code>.
+</p>
+
+<p>
+Once normalized we compute the <code>LambertianTerm</code> which is basically \(\cos \emptyset\), that is the dot product of the normalized vertex normal (<code>normal</code>) and the normalized light direction (<code>-lightDirection</code>).
+</p>
+
+<p>
+The final color is computed as follows:
+</p>
+
+\begin{align}
+\text{vVertexColor} = \text{uMaterialDiffuse} * \text{uLightDiffuse} * (\text{normal} \circle \text{-lightDirection})
+\end{align}
+
+\begin{align}
+= \text{uMaterialDiffuse} * \text{uLightDiffuse} * \text{LambertianTerm}
+\end{align}
+
+<p>
+There are three uniforms that we haven’t discussed yet:
+</p>
+
+<pre>uniform mat4 uModelViewMatrix;
+uniform mat4 uProjectionMatrix;
+uniform mat4 uNormalMatrix;
+</pre>
+
+<p>
+We can see that these three uniforms are 4x4 matrices. These matrices are required in the vertex shader to calculate the location for vertices and normals whenever we move the camera. So, for example, when we compute the normalized vertex normals, first we transform them using <code>uNormalMatrix</code>:
+</p>
+
+<pre>vec3(uNormalMatrix * vec4(aVertexNormal, 1.0));
+</pre>
+
+<p>
+And then we normalize the result. And to compute the final vertex position we perform the following computation:
+</p>
+
+<pre>gl_Position = uProjectionMatrix * uModelViewMatrix * vec4(aVertexPosition, 1.0);
+</pre>
+
+<p>
+This line calculates the transformed vertex position. <code>gl_Position</code> is a special output variable that stores the transformed vertex position. So these uniforms and operations deal with camera and world transformations (rotation, scale, and translation).
+</p>
+
+<div id="Lights-OpenGL ES Shading Language (ESSL)-Fragment Shader"><h3 id="Fragment Shader" class="header"><a href="#Lights-OpenGL ES Shading Language (ESSL)-Fragment Shader">Fragment Shader</a></h3></div>
+
+<p>
+The fragment shader is very simple. We just assign the <code>vVertexColor</code> varying to the <code>fragColor</code> output variable.
+</p>
+
+<pre>#version 300 es
+
+// Fragment shaders don't have a default precision so we need
+// to pick one. mediump is a good default. It means "medium precision"
+precision mediump float;
+
+// Computer color coming from the vertex shader
+in vec4 vVertexColor;
+
+// We need to declare an output for the fragment shader
+out vec4 fragColor;
+
+void main() {
+  fragColor = vVertexColor;
+}
+</pre>
+
+<p>
+Remember that the value of the <code>vVertexColor</code> varying will be different from the one calculated in the vertex shader since WebGL will interpolate it by taking the corresponding calculated colors for the vertices surrounding the correspondent fragment (pixel).
 </p>
 </div>
   
